data/all_generated_tests/raw_wast_tests/br_IncorrectConditionEvaluation_742.wast
;; 3. **Test Description**: Use a `br_if` instruction with a constant false condition, ensuring the branch does not occur.    - **Constraint Checked**: Validates correct condition evaluation for `br_if` and ensures no branch occurs.    - **Incorrect Condition Evaluation**: A bug could incorrect the condition causing the branch to occur regardless of the condition’s value.

(assert_invalid
  (module (func $br_if_false_cond (block (result i32) (br_if 0 (i32.const 0) (i32.const 42)) (i32.const 1))))
  "type mismatch"
)